[Fix] v1.1.3 [Dark Mode MAL]

--- a/AzurBlur/Style.css
+++ b/AzurBlur/Style.css
@@ -1,5 +1,5 @@
 /*---------------------------------------------*/
-/*-------------- Azur Blur v1.1.2 ------------*/
+/*-------------- Azur Blur v1.1.3 ------------*/
 /*------ https://github.com/Murakumo-JP -----*/
 /*------------------------------------------*/
 
@@ -39,7 +39,7 @@
 
 * {outline: none;}
 a,a:hover {color: #131722;}
-
+.dark-mode {background-color: transparent;} /* Fix Dark Mode MAL */
 body {
   background-image: var(--body-bg);
   background-position: center;
@@ -48,7 +48,7 @@ body {
 }
 
 #advanced-options:after {
-  content: "MyAnimeList.net is a property of MyAnimeList, LLC. ©2022 All Rights Reserved. \a Azur Blur v1.1.2, Design and Code by MurakumoJP.";
+  content: "MyAnimeList.net is a property of MyAnimeList, LLC. ©2023 All Rights Reserved. \a Azur Blur v1.1.3, Design and Code by MurakumoJP.";
 }
 
 /* Hide unnecessary */
